WIP - docs/examples/tutorials

--- a/docs/abracadabra_basics.ipynb
+++ b/docs/abracadabra_basics.ipynb
@@ -1467,7 +1467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note here that samples Bayesian model provide similar central tendency interval estimates to those calculated by the analytical rates ratio model. However, unlike the rates ratio model which looks at the ratio of central tendencies, the Bayesian AB tests provides _deltas_ or differences amongst the rate parameter samples. Thus differences in $\\lambda$ far away from zero (in this case the diffence in approximately one) indicate significant difference between the treatments when interpreting the Bayesian counts AB test."
+    "Note here that samples drawn from the Bayesian model provide similar central tendency interval estimates to those calculated by the analytical rates ratio model. However, unlike the rates ratio model which looks at the ratio of central tendencies, the Bayesian AB tests provides _deltas_ or differences amongst the rate parameter samples drawn from the model. Thus differences in $\\lambda$ samples that are far away from zero (in this case the diffence is--and should be--approximately equal to one) indicate significant difference between the treatments when interpreting the Bayesian counts AB test."
    ]
   }
  ],
