Add bootstrap examples to docs

--- a/docs/abracadabra_basics.ipynb
+++ b/docs/abracadabra_basics.ipynb
@@ -200,6 +200,8 @@
     "|  | Bayesian| `'beta'`, `'beta_binomial'`, `'bernoulli'`  |\n",
     "| Counts  |Frequentist| `'rates_ratio'`  |\n",
     "|  |Bayesian| `'gamma_poisson'`  |\n",
+    "|  |Bayesian| `'gamma_poisson'`  |\n",
+    "| Non-parametric  |Bootstrap| `'bootstrap'` |\n",
     "\n",
     "3. Run the test against your experiment and interpret the resulting `HypothesisTestResults`"
    ]
@@ -318,7 +320,7 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "-rw-r--r--  1 dustinstansbury  wheel    29K Oct  8 13:46 /tmp/abracadabra_demo_test_results.png\n"
+      "-rw-r--r--  1 dustinstansbury  wheel    29K Oct  8 13:54 /tmp/abracadabra_demo_test_results.png\n"
      ]
     },
     {
@@ -439,15 +441,14 @@
     "\n",
     "# run the test\n",
     "bootstrap_ab_test_results = exper.run_test(bootstrap_ab_test)\n",
-    "bootstrap_ab_test_results.display()\n",
-    "bootstrap_ab_test_results.visualize()"
+    "bootstrap_ab_test_results.display()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the `\"bootstrap\"` hypothesis test results above--which are based on resampling the data set with replacent--are very similar to the results returned by the `\"proportions_delta\"` parametric model, which are based on descriptive statistics and model the data set as a Binomial distribution."
+    "Notice that the `\"bootstrap\"` hypothesis test results above--which are based on resampling the data set with replacent--are very similar to the results returned by the `\"proportions_delta\"` parametric model, which are based on descriptive statistics and model the data set as a Binomial distribution. The results will converge as the sample sizes grow."
    ]
   },
   {
@@ -461,9 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
